<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_bt_project</name>
  <version>0.0.1</version>
  <description>Nav2 BT integration package for battery-aware obstacle-conscious navigation</description>
  <maintainer email="ata99@sfu.ca">Anthony Trieu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_custom_bt_plugins</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>nav2_behavior_tree</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
